--- a/index.html
+++ b/index.html
@@ -96,30 +96,31 @@
 <section id="menu">
     <div class="container">
         <h2>Cardápio</h2>
-        <div class="row">
-            <div class="col-lg-4 col-md-6 mb-4">
+        <div class="container text-center">
+            <div class="row align-items-start">
+              <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card">
                     <img src="assets/img/petisico.webp">
                     <h4>petisco</h4>
                     <P>hamburguer,blend de picanha 180g, salada, queijo, presunto, molho especial.</P>
                 </div>
+              </div>
+              <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card">
                     <img src="assets/img/petisico.webp">
                     <h4>petisco</h4>
                     <P>hamburguer,blend de picanha 180g, salada, queijo, presunto, molho especial.</P>
                 </div>
+              </div>
+              <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card">
                     <img src="assets/img/petisico.webp">
                     <h4>petisco</h4>
                     <P>hamburguer,blend de picanha 180g, salada, queijo, presunto, molho especial.</P>
                 </div>
-                <div class="card">
-                    <img src="assets/img/petisico.webp">
-                    <h4>Petisco</h4>
-                    <P>hamburguer,blend de picanha 180g, salada, queijo, presunto, molho especial.</P>
-                </div>
-            </div>            
-        </div>
+              </div>
+            </div>
+          </div>
     </div>
 </section>
 
