--- a/index.html
+++ b/index.html
@@ -98,38 +98,95 @@
         <h2>Cardápio</h2>
         <div class="container text-center">
             <div class="row align-items-start">
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card">
-                    <img src="assets/img/petisico.webp">
-                    <h4>petisco</h4>
-                    <P>hamburguer,blend de picanha 180g, salada, queijo, presunto, molho especial.</P>
+                <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card">
+                        <img src="assets/img/petisico.webp">
+                        <h4>petisco</h4>
+                        <P>hamburguer,blend de picanha 180g, salada, queijo, presunto, molho especial.</P>
+                    </div>
                 </div>
-              </div>
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card">
-                    <img src="assets/img/petisico.webp">
-                    <h4>petisco</h4>
-                    <P>hamburguer,blend de picanha 180g, salada, queijo, presunto, molho especial.</P>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card">
+                        <img src="assets/img/petisico.webp">
+                        <h4>petisco</h4>
+                        <P>hamburguer,blend de picanha 180g, salada, queijo, presunto, molho especial.</P>
+                    </div>
                 </div>
-              </div>
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card">
-                    <img src="assets/img/petisico.webp">
-                    <h4>petisco</h4>
-                    <P>hamburguer,blend de picanha 180g, salada, queijo, presunto, molho especial.</P>
-                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card">
+                        <img src="assets/img/petisico.webp">
+                        <h4>petisco</h4>
+                        <P>hamburguer,blend de picanha 180g, salada, queijo, presunto, molho especial.</P>
+                    </div>
               </div>
             </div>
-          </div>
+        </div>
     </div>
 </section>
-
+<section id="menu">
+    <div class="container">
+        <div class="container text-center">
+            <div class="row align-items-start">
+                <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card">
+                        <img src="assets/img/petisico.webp">
+                        <h4>petisco</h4>
+                        <P>hamburguer,blend de picanha 180g, salada, queijo, presunto, molho especial.</P>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card">
+                        <img src="assets/img/petisico.webp">
+                        <h4>petisco</h4>
+                        <P>hamburguer,blend de picanha 180g, salada, queijo, presunto, molho especial.</P>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card">
+                        <img src="assets/img/petisico.webp">
+                        <h4>petisco</h4>
+                        <P>hamburguer,blend de picanha 180g, salada, queijo, presunto, molho especial.</P>
+                    </div>
+              </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="menu">
+    <div class="container">
+        <div class="container text-center">
+            <div class="row align-items-start">
+                <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card">
+                        <img src="assets/img/petisico.webp">
+                        <h4>petisco</h4>
+                        <P>hamburguer,blend de picanha 180g, salada, queijo, presunto, molho especial.</P>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card">
+                        <img src="assets/img/petisico.webp">
+                        <h4>petisco</h4>
+                        <P>hamburguer,blend de picanha 180g, salada, queijo, presunto, molho especial.</P>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card">
+                        <img src="assets/img/petisico.webp">
+                        <h4>petisco</h4>
+                        <P>hamburguer,blend de picanha 180g, salada, queijo, presunto, molho especial.</P>
+                    </div>
+              </div>
+            </div>
+        </div>
+    </div>
+</section>
 <section>
     <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
