--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         nav {
-            background-color: #920000;
+            background-color: #770101;
         }
 
         nav a {
@@ -42,17 +42,25 @@
             color: #ffffff;
             padding: 20px 0;
         }
+
+        .space {
+            align-items: end;
+        }
     </style>
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <a class="navbar-brand" href="#">
+          <img src="assets/img/buzz-logo.png" alt="Bootstrap" width="40" height="40">
+        </a>
+
     <a class="navbar-brand" href="#">Hamburgueria Delícia</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
+    <div class="collapse navbar-collapse space" id="navbarResponsive">
         <ul class="navbar-nav ml-auto space">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Home</a>
@@ -83,9 +91,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
-                <h2>Sobre Nós</h2>
-                <p>Bem-vindo à Hamburgueria Delícia, onde cada hambúrguer é uma experiência única e saborosa. Nosso compromisso é oferecer aos nossos clientes os melhores ingredientes, preparados com paixão e dedicação.</p>
-                <p>Nossos chefs são especialistas em criar combinações irresistíveis que agradam a todos os paladares. Utilizamos ingredientes frescos e de alta qualidade para garantir que cada mordida seja uma explosão de sabores.</p>
+                <h1>Sobre Nós</h1>
+                <p style="font-size: 20px;">Bem-vindo à Hamburgueria Delícia, onde cada hambúrguer é uma experiência única e saborosa. Nosso compromisso é oferecer aos nossos clientes os melhores ingredientes, preparados com paixão e dedicação.</p>
+                <p style="font-size: 20px;">Nossos chefs são especialistas em criar combinações irresistíveis que agradam a todos os paladares. Utilizamos ingredientes frescos e de alta qualidade para garantir que cada mordida seja uma explosão de sabores.</p>
             </div>
             <div class="col-lg-6">
                 <img src="assets/img/INTERIOR.jpg" alt="Interior da Hamburgueria" class="img-fluid">
@@ -95,7 +103,8 @@
 </section>
 <section id="menu">
     <div class="container">
-        <h2>Cardápio</h2>
+        <h2 style="text-align: center;">Cardápio<br><br></h2>
+        <h3>Lanches<br><br></h3>
         <div class="container text-center">
             <div class="row align-items-start">
                 <div class="col-lg-4 col-md-6 mb-4">
@@ -175,6 +184,59 @@
                         <img src="assets/img/petisico.webp">
                         <h4>petisco</h4>
                         <P>hamburguer,blend de picanha 180g, salada, queijo, presunto, molho especial.</P>
+                    </div>
+              </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="menu">
+    <div class="container">
+        <h3><br><br>Bebidas<br><br></h3>
+        <div class="container text-center">
+            <div class="row align-items-start">
+                <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card">
+                        <img src="assets/img/Coca.png">
+                        <h4>Coca-cola - 2l</h4>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card">
+                        <img src="assets/img/Coca.png">
+                        <h4>Coca-cola - 2l</h4>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card">
+                        <img src="assets/img/Coca.png">
+                        <h4>Coca-cola - 2l</h4>
+                    </div>
+              </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="menu">
+    <div class="container">
+        <div class="container text-center">
+            <div class="row align-items-start">
+                <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card">
+                        <img src="assets/img/Coca.png">
+                        <h4>Coca-cola - 2l</h4>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card">
+                        <img src="assets/img/Coca.png">
+                        <h4>Coca-cola - 2l</h4>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card">
+                        <img src="assets/img/Coca.png">
+                        <h4>Coca-cola - 2l</h4>
                     </div>
               </div>
             </div>
